# link-drip

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 45e161a449ec_initial_tables_users_links_clicks.py
src/app/: config.py  database.py  dependencies.py  main.py
src/app/api/: analytics.py  auth.py  dashboard.py  health.py  pages.py  redirect.py
src/app/models/: __init__.py  click.py  link.py  user.py
src/app/schemas/: auth.py  link.py
src/app/services/: auth.py  clicks.py  links.py
src/app/templates/layouts/: base.html  dashboard.html
src/app/templates/pages/: 404.html  analytics.html  dashboard.html  landing.html  login.html  qr.html  register.html
tests/: conftest.py  test_analytics.py  test_auth.py  test_health.py  test_links.py  test_redirect.py
